<resources>
    <string name="app_name">front_end_movil</string>
    <string name="equipado">Equipado</string>
    <string name="Noequipado">No equipado</string>
    <item name="acceder" type="id" />
    <item name="password" type="id" />
    <item name="registro" type="id" />
    <item name="nombre_usuario" type="id" />
    <item name="texto_contasenya" type="id" />
    <item name="email" type="id" />
    <item name="password_new" type="id" />
    <item name="password_new2" type="id" />
    <item name="confirmar" type="id" />
    <item name="atras" type="id" />
    <item name="signup" type="id" />
    <item name="ajustes" type="id" />
    <item name="signout" type="id" />
    <item name="ok" type="id" />
    <item name="comenzar" type="id" />
    <item name="cancelar" type="id" />
    <item name="posponer" type="id" />
    <item name="abandonar" type="id" />
    <item name="salir" type="id" />
    <item name="nueva" type="id" />
    <string-array name="opciones">
        <item>5</item>
        <item>10</item>
        <item>15</item>
    </string-array>
    <string-array name="opcionesJugadores">
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <string-array name="opciones_orden">
        <item>Todas las partidas</item>
        <item>Partidas Individuales</item>
        <item>Partidas Multijugador</item>
    </string-array>
</resources>